home work lesson 26

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 this.age = age;
             }
             display() {
-                return "My name is " + this.name + "and my age is " + this.age
+                return "My name is " + this.name + "and my age isj " + this.age
             }
         }
         var stu1 = new student("riya", 6)
